# SPO

SPOLab1/: CMakeLists.txt  Makefile  main.c
SPOLab1/module/: CMakeLists.txt  module.c  module.h
SPOLab1/module/grammar/: Grammar.g
SPOLab1/module/grammar/lexer/: GrammarLexer.c  GrammarLexer.h
SPOLab1/module/grammar/parser/: GrammarParser.c  GrammarParser.h
SPOLab1/module/struct/ast/: Ast.c  Ast.h
SPOLab1/module/struct/error/: ErrorContainer.c  ErrorContainer.h
SPOLab1/module/struct/result/: Result.c  Result.h
SPOLab1/tests/: test1.txt  test2.txt
